[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://resources/Creamer .ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=1]
resource_name = "hover_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -20.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hover_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, 0.0 ]
}

[node name="CardContainer" type="Node2D"]
script = ExtResource( 1 )

[node name="Card" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Card"]
margin_right = 80.0
margin_bottom = 160.0
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="Card"]
margin_right = 80.0
margin_bottom = 160.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "2"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Card"]
margin_right = 80.0
margin_bottom = 160.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Card"]
anims/hover_in = SubResource( 1 )
anims/hover_out = SubResource( 2 )

[node name="Filter" type="ColorRect" parent="Card"]
visible = false
margin_right = 80.0
margin_bottom = 162.0
color = Color( 0.403922, 0.403922, 0.403922, 1 )

[node name="Separation" type="ColorRect" parent="Card/Filter"]
margin_top = 160.0
margin_right = 80.0
margin_bottom = 162.0
color = Color( 0, 0, 0, 1 )

[connection signal="tree_exiting" from="." to="." method="_on_Card_tree_exiting"]
[connection signal="gui_input" from="Card/CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="mouse_entered" from="Card/CenterContainer" to="." method="_on_CenterContainer_mouse_entered"]
[connection signal="mouse_exited" from="Card/CenterContainer" to="." method="_on_CenterContainer_mouse_exited"]
